--- a/css/side_menu.css
+++ b/css/side_menu.css
@@ -89,7 +89,7 @@
 .drawer-menu a {
   display: flex;
   align-items: center;
-  font-size: 0.9em;
+  font-size: 0.6em;
   color: #333;
   text-decoration: none;
   text-shadow: rgba(162, 164, 166, 0.1) 1px 1px 1px;
